Priemera puesta en marcha. Empezando con ctrlPersonaje

--- a/index.html
+++ b/index.html
@@ -3,22 +3,21 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Documentación API Biblioteca STL</title>
+    <title>Documentación API Generador MYZ</title>
     <link rel="stylesheet" type="text/css" href="documentacion.css">
 </head>
 
 <body>
     <header>
-        <h1>API Biblioteca STL</h1>
-        <p>La API Biblioteca STL permite a los usuarios interactuar con la plataforma para gestionar archivos y proyectos
-            relacionados con modelos 3D STL.</p>
+        <h1>API Generador MYZ</h1>
+        <p>La API Generador MYZ permite a los usuarios interactuar con la plataforma para gestionar datos y personajes o arcas del juego.</p>
     </header>
 
     <main>
         <section class="base-url">
             <h2>URL Base</h2>
             <p>Debido a que no se utiliza la reescritura de URL, todos los endpoints se acceden a través de la URL base, seguido de los parámetros GET controlador, metodo y cualquier otro parámetro adicional necesario.</p>
-            <p>https://fernandofbamzn.duckdns.org/ApiBibliotecaSTL/api.php</p>
+            <p>https://fernandofbamzn.duckdns.org/ApiGeneradorMYZ/api.php</p>
         </section>
 
         <section class="endpoints">
